packages/frontend/scss/message/_message.scss
/* ... */
.message.type-sticker,
.message.video-only {
  .msg-container {
    .quote-background {
      // `.msg-container` background is transparent or black,
      // so let's explicitly apply the color just for the quote.
      background: var(--messageBg);

      padding: 5px;
      padding-inline-start: 6px;
      border-radius: 7px;

      & > .quote {
        margin: 0;
      }
    }
  }
}

.message.has-html {
  .text {
    padding-bottom: 10px;
  }
}

.message.error.incoming {
  .text {
    font-style: italic;
  }
}

.message.forwarded {
  .forwarded-indicator {
    font-weight: bold;
    font-size: 0.9em;
    margin-bottom: 3px;
    opacity: 0.86;

    .forwarded-indicator-button {
      @include mixins.button-reset;

      cursor: pointer;
    }
  }
}

@media (max-width: variables.$breakpoint-messagelist) {
  .message {
    max-width: 100%;

    img.portrait:not(.sticker) {
      height: 300px;
    }
  }
}

.info-message {
  width: 100%;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;

  .bubble {
    @include mixins.button-reset;

    display: inline-block;
    text-align: center;
    padding: 7px 14px;
    padding-bottom: 5px;
    background-color: var(--infoMessageBubbleBg);
    border-radius: 20px;
    opacity: 0.9;
    color: var(--infoMessageBubbleText);
    outline-offset: 4px;

    .status-icon.sending {
      background-color: var(--infoMessageBubbleText);
    }
  }

  &.daymarker {
    // Be careful with overriding margins on messages, see
    // commit c56a78595df073bada81e1f769407990e37d8d57
    // (https://github.com/deltachat/deltachat-desktop/pull/5244).
    // `margin-top` should be fine, unlike margin-bottom.
    margin-top: 1.5rem;

    .bubble {
      font-weight: bold;
    }
  }

  &.interactive > .bubble {
    cursor: pointer;

    &:hover,
    &:focus,
    &:focus-within {
      opacity: 1;
    }
  }

  &.webxdc-info > .bubble {
    padding: 7px 8px;
    img {
      height: 18px;
      width: 18px;
      margin-inline-end: 5px;
      border-radius: 7%; // webxdc border radius
      vertical-align: bottom;
      background-color: black;
    }
  }

  &.big > .bubble {
    max-width: 550px;
    font-size: 1rem;
    padding: 2rem;
    font-style: normal;
    white-space: pre-wrap;
    text-align: left;
  }
}

// quote

.quote-background {
  @include mixins.button-reset;

  overflow: hidden;
  max-width: 100%;
}

.message .msg-container .quote,
.composer .quote {
  border-inline-start: 3px gray solid;
  padding: 0 4px;
  padding-inline-start: 9px;
  margin: 2px 0 5px 0;
  display: flex;
  --quote-img-size: 36px;

  // &.has-message:hover {
  //   background: rgba(0, 0, 0, 0.07);
  // }

  .author {
    display: block;
    height: 13px;
    font-size: 13px;
    line-height: 13px;
    margin-bottom: 2px;
    font-weight: 300;
  }

  .quote-author,
  .quote-text {
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .quoted-text {
    font-size: 12px;
    line-height: 12px;
    margin: 0;
    max-height: 40px;
    overflow: hidden;
    line-clamp: 3;
    display: -webkit-box;
    -webkit-line-clamp: 3;
    // see https://developer.mozilla.org/en-US/docs/Web/CSS/-webkit-line-clamp
    // and yes using this property is a bit hacky and depends on browser support
    // but atleast its simpler than estimating size with js
    -webkit-box-orient: vertical;
    color: var(--messageQuotedText);
    white-space: pre-line;
    user-select: text;
    position: relative;
    word-break: break-word;
  }

  img.quoted-image {
    // Remember that width and height need to be set prior to the image
    // getting actually loaded by the browser, to avoid content shifts.
    // Same goes for messages' `.attachment-content`.
    // See https://github.com/deltachat/deltachat-desktop/issues/4404.
    //
    // Setting just the height is not enough, because there might be text
    // displayed beside the image, which might wrap and thus change height.
    //
    // In addition, really short and wide images could make the message
    // overflow the chat container, for non-self-sent messages at least.
    height: var(--quote-img-size);
    width: var(--quote-img-size);
    // For some reason the image element can get shrunk
    // while it's being loaded.
    // This, however, is not the case for images with no `src` at all,
    // god knows why.
    // See https://github.com/deltachat/deltachat-desktop/issues/4404#issuecomment-2602438175
    flex-shrink: 0;

    object-fit: scale-down;
    object-position: center;

    margin-inline-start: 6px;
  }

  img.quoted-webxdc-icon {
    // The dimensions need to be fixed, same as for `.quoted-image`.
    height: var(--quote-img-size);
    width: var(--quote-img-size);
    flex-shrink: 0;

    margin-inline-start: 6px;
    border-radius: 7%;
  }
}

.quoted-text,
.msg-body > .text {
  a {
    text-decoration: underline;
  }
}

/* This is for making links in quoted texts unclickable and
   have an appereance like the rest of text in there */
.quoted-text > a {
  pointer-events: none;
  text-decoration: none;
  color: var(--messageQuotedText);
}

.author-wrapper {
  &.can-hide {
    display: none;
  }
  .author {
    @include mixins.button-reset;

    display: inline-block;
    max-width: 40vw;
    font-size: 13px;
    font-weight: 300;
    line-height: 18px;
    height: 18px;
    overflow-x: hidden;
    overflow-y: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    cursor: pointer;
  }
}

